--- a/sls.conf
+++ b/sls.conf
@@ -10,7 +10,21 @@ srt {
         latency 2000;
         domain_player play;
         domain_publisher live;
-        default_sid live/stream/test1;
+        default_sid live/stream/feed1;
+        backlog 100;
+        idle_streams_timeout 3;
+
+        app {
+            app_publisher stream;
+            app_player stream;
+        }
+    }
+    server {
+        listen 8283;
+        latency 2000;
+        domain_player play;
+        domain_publisher live;
+        default_sid live/stream/feed2;
         backlog 100;
         idle_streams_timeout 3;
 
